<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uds_mmu_teleop</name>
  <version>0.0.0</version>
  <description>Joystick node for UDS MMU</description>
  <maintainer email="kyuhyong.you@nearthlab.com">Kyuhyong</maintainer>
  <license>None</license>
  
  <depend>std_msgs</depend>
  <depend>uds_mmu_msgs</depend>
  <depend>uds_mmu_utils</depend>

  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
